--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       </div>
     </header>
     <main>
+        <!-- about section-start -->
       <section class="about">
         <h1 class="section-title">About Me</h1>
         <p class="section-description">
@@ -65,6 +66,51 @@
            </div>
        </div>
       </section>
+      <!-- about- secton- finished -->
+      <!-- what i do section start -->
+      <section class="what-i-do-section">
+            <h1 class="section-title">What I Do</h1>
+            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+        </section>
+            <div class="boxes">
+                <div class="card">
+                    <img src="/images/icons/js.png" alt="">
+                    <div class="skill">
+                    <h3 class="card-title">Vanilla JavaScript</h3>
+                    <p class="card-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                </div>
+                <div class="card">
+                    <img src="/images/icons/react.png" alt="">
+                    <div class="skill">
+                    <h3 class="card-title">React</h3>
+                    <p class="card-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                </div>
+                <div class="card">
+                    <img src="/images/icons/nodejs.png" alt="">
+                    <div class="skill">
+                    <h3 class="card-title">Node.js</h3>
+                    <p class="card-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                </div>
+                <div class="card">
+                    <img src="/images/icons/mongo.png" alt="">
+                    <div class="skill">
+                    <h3 class="card-title">MongoDB</h3>
+                    <p class="card-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                </div>
+            </div>
+      
+     <!-- what i do section  end -->
+     <!-- resume section start -->
+     <section class="resume">
+        <div class="resume-title">
+            <h1>A summary of My Resume</h1>
+        </div>
+     </section>
+     <!-- resume section end -->
     </main>
     <footer></footer>
   </body>
