experience and education section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
     </header>
     <main>
-        <!-- about section-start -->
+      <!-- about section-start -->
       <section class="about">
         <h1 class="section-title">About Me</h1>
         <p class="section-description">
@@ -47,70 +47,166 @@
           while working with me. Delivering work within time and budget which
           meets clients requirements in our mata.
         </p>
-       <div class="about-info-section">
-           <div class="about-info">
+        <div class="about-info-section">
+          <div class="about-info">
             <p class="info-title">Name:</p>
             <p class="info-description">Mary Hardy</p>
-           </div>
-           <div class="about-info">
+          </div>
+          <div class="about-info">
             <p class="info-title">Email:</p>
             <p class="info-description">info2gmail.com</p>
-           </div>
-           <div class="about-info">
+          </div>
+          <div class="about-info">
             <p class="info-title">Date of Birth:</p>
             <p class="info-description">21-06-2000</p>
-           </div>
-           <div class="about-info">
+          </div>
+          <div class="about-info">
             <p class="info-title">Form</p>
             <p class="info-description">USA</p>
-           </div>
-       </div>
+          </div>
+        </div>
       </section>
       <!-- about- secton- finished -->
       <!-- what i do section start -->
       <section class="what-i-do-section">
-            <h1 class="section-title">What I Do</h1>
-            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
-        </section>
-            <div class="boxes">
-                <div class="card">
-                    <img src="/images/icons/js.png" alt="">
-                    <div class="skill">
-                    <h3 class="card-title">Vanilla JavaScript</h3>
-                    <p class="card-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                </div>
-                </div>
-                <div class="card">
-                    <img src="/images/icons/react.png" alt="">
-                    <div class="skill">
-                    <h3 class="card-title">React</h3>
-                    <p class="card-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                </div>
-                </div>
-                <div class="card">
-                    <img src="/images/icons/nodejs.png" alt="">
-                    <div class="skill">
-                    <h3 class="card-title">Node.js</h3>
-                    <p class="card-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                </div>
-                </div>
-                <div class="card">
-                    <img src="/images/icons/mongo.png" alt="">
-                    <div class="skill">
-                    <h3 class="card-title">MongoDB</h3>
-                    <p class="card-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                </div>
-                </div>
-            </div>
-      
-     <!-- what i do section  end -->
-     <!-- resume section start -->
-     <section class="resume">
-        <div class="resume-title">
-            <h1>A summary of My Resume</h1>
+        <h1 class="section-title">What I Do</h1>
+        <p class="section-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+      </section>
+      <div class="boxes">
+        <div class="card">
+          <img src="/images/icons/js.png" alt="" />
+          <div class="skill">
+            <h3 class="card-title">Vanilla JavaScript</h3>
+            <p class="card-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
         </div>
-     </section>
-     <!-- resume section end -->
+        <div class="card">
+          <img src="/images/icons/react.png" alt="" />
+          <div class="skill">
+            <h3 class="card-title">React</h3>
+            <p class="card-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="/images/icons/nodejs.png" alt="" />
+          <div class="skill">
+            <h3 class="card-title">Node.js</h3>
+            <p class="card-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="/images/icons/mongo.png" alt="" />
+          <div class="skill">
+            <h3 class="card-title">MongoDB</h3>
+            <p class="card-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- what i do section  end -->
+      <!-- resume section start -->
+      <section class="resume">
+        <div class="resume-title">
+          <h1>A summary of My Resume</h1>
+        </div>
+        <div class="resume-section">
+          <div class="full-education-section">
+            <div class="education-sction">
+              <h2 class="edu-title">My Education</h2>
+              <h3 class="edu-course-title">Master in Computer Engineering</h3>
+              <p class="edu-description">Harvard University / 2015 - 2017</p>
+              <p class="pera">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor..
+              </p>
+            </div>
+            <hr />
+            <div class="education-sction">
+              <h2 class="edu-title">My Education</h2>
+              <h3 class="edu-course-title">Master in Computer Engineering</h3>
+              <p class="edu-description">Harvard University / 2015 - 2017</p>
+              <p class="pera">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor..
+              </p>
+            </div>
+            <hr />
+            <div class="education-sction">
+              <h2 class="edu-title">My Education</h2>
+              <h3 class="edu-course-title">Master in Computer Engineering</h3>
+              <p class="edu-description">Harvard University / 2015 - 2017</p>
+              <p class="pera">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor..
+              </p>
+            </div>
+            <hr />
+          </div>
+          <div class="full-ex-section">
+          <div class="experience-section">
+            <h2 class="edu-title">My Experience</h2>
+            <h3 class="edu-course-title">Sr. Font End Developer</h3>
+            <p class="edu-description">Apple Inc / 2020 - Current</p>
+            <p class="pera">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor..
+            </p>
+          </div>
+          <hr />
+          <div class="experience-section">
+            <h2 class="edu-title">My Experience</h2>
+            <h3 class="edu-course-title">Sr. Font End Developer</h3>
+            <p class="edu-description">Apple Inc / 2020 - Current</p>
+            <p class="pera">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor..
+            </p>
+          </div>
+          <hr />
+          <div class="experience-section">
+            <h2 class="edu-title">My Experience</h2>
+            <h3 class="edu-course-title">Sr. Font End Developer</h3>
+            <p class="edu-description">Apple Inc / 2020 - Current</p>
+            <p class="pera">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor..
+            </p>
+          </div>
+          <hr />
+        </div>
+        </div>
+        <div class="resume-button">
+            <button class="btn-primary">Dwonload CV</button>
+        </div>
+      </section>
+      <!-- resume section end -->
     </main>
     <footer></footer>
   </body>
