--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="head">
       <nav>
         <h1 class="nav-title">Ma<span class="primary-color">r</span>y</h1>
         <ul class="list-item">
@@ -33,7 +33,7 @@
           </p>
           <button class="btn-primary">Dwonload CV</button>
         </div>
-        <img src="/images/hardy.png" alt="" />
+        <img class="developer-img" src="/images/hardy.png" alt="" />
       </div>
     </header>
     <main>
@@ -167,47 +167,69 @@
             <hr />
           </div>
           <div class="full-ex-section">
-          <div class="experience-section">
-            <h2 class="edu-title">My Experience</h2>
-            <h3 class="edu-course-title">Sr. Font End Developer</h3>
-            <p class="edu-description">Apple Inc / 2020 - Current</p>
-            <p class="pera">
-              List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor..
-            </p>
+            <div class="experience-section">
+              <h2 class="edu-title">My Experience</h2>
+              <h3 class="edu-course-title">Sr. Font End Developer</h3>
+              <p class="edu-description">Apple Inc / 2020 - Current</p>
+              <p class="pera">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor..
+              </p>
+            </div>
+            <hr />
+            <div class="experience-section">
+              <h2 class="edu-title">My Experience</h2>
+              <h3 class="edu-course-title">Sr. Font End Developer</h3>
+              <p class="edu-description">Apple Inc / 2020 - Current</p>
+              <p class="pera">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor..
+              </p>
+            </div>
+            <hr />
+            <div class="experience-section">
+              <h2 class="edu-title">My Experience</h2>
+              <h3 class="edu-course-title">Sr. Font End Developer</h3>
+              <p class="edu-description">Apple Inc / 2020 - Current</p>
+              <p class="pera">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor..
+              </p>
+            </div>
+            <hr />
           </div>
-          <hr />
-          <div class="experience-section">
-            <h2 class="edu-title">My Experience</h2>
-            <h3 class="edu-course-title">Sr. Font End Developer</h3>
-            <p class="edu-description">Apple Inc / 2020 - Current</p>
-            <p class="pera">
-              List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor..
-            </p>
-          </div>
-          <hr />
-          <div class="experience-section">
-            <h2 class="edu-title">My Experience</h2>
-            <h3 class="edu-course-title">Sr. Font End Developer</h3>
-            <p class="edu-description">Apple Inc / 2020 - Current</p>
-            <p class="pera">
-              List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor..
-            </p>
-          </div>
-          <hr />
-        </div>
         </div>
         <div class="resume-button">
-            <button class="btn-primary">Dwonload CV</button>
+          <button class="btn-primary">Dwonload CV</button>
         </div>
       </section>
       <!-- resume section end -->
     </main>
-    <footer></footer>
+    <footer>
+      <div class="contact-description">
+        <h1 class="contact-title">Lets Connect</h1>
+        <p class="contact-pera">
+          Please fill out the form on this section to contact with me 
+          or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div class="icon-footer">
+          <img class="icon" src="/images/icons/facebook.png" alt="" />
+          <img class="icon" src="/images/icons/insta.png" alt="" />
+          <img class="icon" src="/images/icons/twitter.png" alt="" />
+        </div>
+      </div>
+      <div class="forum">
+        <h1 class="forum-title">Let’s Message me</h1>
+        <form action="">
+          <input class="name-holder" type="text" placeholder="your name" /><br>
+          <input class= "email-holder"type="email" placeholder="your email" /> <br>
+          <input class="message"type="text" placeholder="message">
+          <button class="btn-primary">Submit</button>
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
