--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
       </section>
       <!-- resume section end -->
     </main>
+    <!-- footer start -->
     <footer>
       <div class="contact-description">
         <h1 class="contact-title">Lets Connect</h1>
