--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </p>
           <button class="btn-primary">Dwonload CV</button>
         </div>
-        <img class="developer-img" src="/images/hardy.png" alt="" />
+        <img class="developer-img" src="./images/hardy.png" alt="" />
       </div>
     </header>
     <main>
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/images/icons/react.png" alt="" />
+          <img src="./images/icons/react.png" alt="" />
           <div class="skill">
             <h3 class="card-title">React</h3>
             <p class="card-description">
@@ -101,7 +101,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/images/icons/nodejs.png" alt="" />
+          <img src="./images/icons/nodejs.png" alt="" />
           <div class="skill">
             <h3 class="card-title">Node.js</h3>
             <p class="card-description">
@@ -112,7 +112,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/images/icons/mongo.png" alt="" />
+          <img src="./images/icons/mongo.png" alt="" />
           <div class="skill">
             <h3 class="card-title">MongoDB</h3>
             <p class="card-description">
@@ -217,9 +217,9 @@
           or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
         </p>
         <div class="icon-footer">
-          <img class="icon" src="/images/icons/facebook.png" alt="" />
-          <img class="icon" src="/images/icons/insta.png" alt="" />
-          <img class="icon" src="/images/icons/twitter.png" alt="" />
+          <img class="icon" src="./images/icons/facebook.png" alt="" />
+          <img class="icon" src="./images/icons/insta.png" alt="" />
+          <img class="icon" src="./images/icons/twitter.png" alt="" />
         </div>
       </div>
       <div class="forum">
