--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </section>
       <div class="boxes">
         <div class="card">
-          <img src="/images/icons/js.png" alt="" />
+          <img src="./images/icons/js.png" alt="" />
           <div class="skill">
             <h3 class="card-title">Vanilla JavaScript</h3>
             <p class="card-description">
